<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnterClassActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="222dp"
        android:layout_height="89dp"
        android:layout_marginTop="16dp"
        android:text="@string/Choose_your_past_courses"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/department_dropdown"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="496dp"
        android:spinnerMode="dialog"
        app:layout_constraintStart_toStartOf="@+id/quarter_dropdown"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/quarter_dropdown"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="496dp"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/year_input"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginTop="496dp"
        android:layout_marginEnd="100dp"
        android:ems="10"
        android:hint="@string/year"
        android:inputType="date"
        app:layout_constraintEnd_toStartOf="@+id/department_dropdown"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/course_number_input"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="496dp"
        android:ems="10"
        android:hint="@string/course_number"
        android:inputType="numberSigned"
        app:layout_constraintStart_toStartOf="@+id/department_dropdown"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/add_course"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginBottom="12dp"
        android:onClick="onAddCourseClicked"
        android:text="@string/add_course"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/courses_view"
        android:layout_width="404dp"
        android:layout_height="374dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:onClick="doneClicked"
        android:text="DONE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/class_size"
        android:layout_width="91dp"
        android:layout_height="42dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.854" />

    <!--    <com.toptoche.searchablespinnerlibrary.SearchableSpinner-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="16dp"-->
    <!--        android:layout_marginTop="21dp"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/department_dropdown" />-->


</androidx.constraintlayout.widget.ConstraintLayout>