...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:src="@drawable/default_pfp"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="20dp"
        android:onClick="onConfirmClicked"
        android:text="Confirm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_pfp" />
</androidx.constraintlayout.widget.ConstraintLayout>
